# CloudMark_BE

./: .env  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  requirements.txt  requirements_dev.txt  requirements_test_no_conflicts.txt  setup.cfg  slack.py  tox.ini
DB/: CreateCloudMark.py  DBUtility.py  DbLocalCredential.json  InsertCloudMark.py  __init__.py
DB/TemplateJson/: azienda.json  commessa.json  tipoAccount.json  tipoPresenza.json
DB/utility/: cloudmark_db_and_tables_creation.sql  insert_records.sql
Dao/: AccountDao.py  AccountTypeDao.py  BusinessDao.py  CallBackResponse.py  ContractTypeDAO.py  CustomerDao.py  EmployeeDAO.py  OrderDao.py  OrderEmployee.py  PresenceDao.py  PresenceTypeDao.py  test.py
Dao/TestDao/: TestAccountType.py  TestCONTRACT.py  TestPresenceType.py
Model/: AccountModel.py  BusinessModel.py  CallBackResponseModel.py  CustomerModel.py  EmployeeModel.py  LastWorkModel.py  OrderEmployeeModel.py  OrderModel.py  PresenceModel.py  UserModel.py
api/: Api.py
api/DB/: CreateCloudMark.py  DBUtility.py  DbCredential.json  DbLocalCredential.json  InsertCloudMark.py
api/Dao/: AccountDao.py  AccountTypeDao.py  BusinessDao.py  CallBackResponse.py  CommessaDAO.py  ContractTypeDAO.py  test.py  (+9 more)
back-end/: .gitignore
tests/: __init__.py  readme.txt  test_api_account.py  test_api_business.py  test_api_customer.py  test_api_employee.py  test_api_order_employee.py  test_api_orders.py  test_api_presence.py  test_api_type_account.py  test_api_type_contract.py  test_api_type_presence.py  test_main.py  test_slack.py
(+79 files in other folders)
